# snu-gsds-nlp

./: .gitignore  README.md  pyproject.toml
assignment1/: .gitignore  document_retrieval.ipynb  pyproject.toml  pytorch101.py  word2vec.ipynb
assignment2/__MACOSX/: ._gsds-nlp-hw2
assignment2/__MACOSX/gsds-nlp-hw2/a2/: ._collect_submission.sh
assignment2/__MACOSX/gsds-nlp-hw2/a2/sentimentAnalysis/: ._Sentiment_Analysis.ipynb
assignment2/__MACOSX/gsds-nlp-hw2/a2/skipgram/: ._run.py  ._word2vec.py
assignment2/__MACOSX/gsds-nlp-hw2/a2/skipgram/utils/: .___init__.py  (+1 more)
assignment2/gsds-nlp-hw2/a2/: collect_submission.sh
assignment2/gsds-nlp-hw2/a2(tex)/: assignment.sty  main.tex
assignment2/gsds-nlp-hw2/a2/sentimentAnalysis/: Sentiment_Analysis.ipynb
assignment2/gsds-nlp-hw2/a2/skipgram/: run.py  saved_params_10000.npy  saved_params_15000.npy  saved_params_20000.npy  saved_params_5000.npy  saved_state_10000.pickle  saved_state_15000.pickle  saved_state_20000.pickle  saved_state_5000.pickle  word2vec.py
assignment2/gsds-nlp-hw2/a2/skipgram/utils/: treebank.py
assignment3/: collect_submission.sh
assignment3/a3(tex)/: assignment.sty  main.tex
assignment3/q3/: assignment_code.py  model_embeddings.py  nmt_model.py  run.py  sanity_check.py  utils.py
assignment3/q3/outputs/: test_outputs_1.txt  test_outputs_10.txt  test_outputs_2.txt  test_outputs_25.txt  test_outputs_3.txt  test_outputs_4.txt  test_outputs_5.txt
assignment4/a4(tex)/: assignment.sty  main.tex
assignment4/q1/: q1a.ipynb  q1b.ipynb
assignment4/q2/: logger.py  run.sh  setup.md
(+1 files in other folders)
