[tool.poetry]
name = "snu-nlp"
version = "0.1.0"
description = ""
authors = ["Jaehoon Choi <158256936+jaehoonchoi95@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
jupyter = "^1.0.0"
notebook = "^7.1.2"
pydantic = "^2.7.4"
lxml = "^5.2.2"
torch = {version = "^2.4.0+cu121", source = "pytorch-gpu"}
torchvision = {version = "^0.19.0+cu121", source = "pytorch-gpu"}
torchaudio = {version = "^2.4.0+cu121", source = "pytorch-gpu"}
scikit-learn = "^1.5.2"
nltk = "^3.9.1"
gensim = "^4.3.3"
docopt = "^0.6.2"
sentencepiece = "^0.2.0"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
